# cmake_objlib

./: CMakeLists.txt
make_object/: CMakeLists.txt  hello.cpp
use_object/: CMakeLists.txt
